frontend/test/should_pass/stringcomp.grg
rule r(var s:string) {
	if{ "a" < s; }
	if{ "a" <= s; }
	if{ !("a" > s); }
	if{ !("a" >= s); }

	if{ !("a" == s); }
	if{ "a" != s; }

	modify {
		def var b:boolean;
		eval { yield b = "a" < s; }
		eval { yield b = "a" <= s; }
		eval { yield b = !("a" > s); }
		eval { yield b = !("a" >= s); }

		eval { yield b = !("a" == s); }
		eval { yield b = "a" != s; }
	}
}
