frontend/test/should_fail/exec_disjoint_type_returned.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  a : A;
  b : B;
  modify{
    return (b);
    exec((c:A)   =r(y)); // wrong type as return var => should_fail
  }
}
